--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,39 @@
     </div>
 </header>
 <nav>
-        <div class="container small-cont">
+        <div class="container small-cont wide-nav">
+            <div class="row">
+                <div class="col-sm-3 text-center">
+                    <h4><a href="social.html" title="social">SOCIAL</a></h4>
+                </div>
+                <div class="col-sm-3 text-center">
+                    <h4><a href="politics.html" title="politics">POLITICS</a></h4>
+                </div>
+                <div class="col-sm-3 text-center">
+                    <h4><a href="science-tech.html" title="science-tech">SCIENCE</a></h4>
+                </div>
+                <div class="col-sm-3 text-center">
+                    <h4><a href="sports.html" title="sports">SPORTS</a></h4>
+                </div>
+                <div class="hide-search">
+                    <div class="input-group">
+                      <input type="text" class="form-control" placeholder="Search our posts...">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">Go!</button>
+                      </span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    <button type="button" class="thin-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+    <div class="container small-cont thin-nav">
             <div class="row">
                 <div class="col-sm-3 text-center">
                     <h4><a href="social.html" title="social">SOCIAL</a></h4>
