--- a/templates/index.html
+++ b/templates/index.html
@@ -35,19 +35,11 @@
                 <div class="col-sm-3 text-center">
                     <h4><a href="sports.html" title="sports">SPORTS</a></h4>
                 </div>
-                <div class="hide-search">
-                    <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Search our posts...">
-                      <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">Go!</button>
-                      </span>
-                    </div>
-                </div>
 
             </div>
         </div>
 
-    <button type="button" class="thin-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <button type="button" class="thin-nav-toggle navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -112,13 +104,13 @@
     <!-- Our own ads for following us, sharing, and contributing -->
         <div class="col-sm-4">
             <section>
-                    <div class="input-group">
+                    <div class="input-group thin-search-off">
                       <input type="text" class="form-control" placeholder="Search our posts...">
                       <span class="input-group-btn">
                         <button class="btn btn-default" type="button">Go!</button>
                       </span>
                     </div><!-- /input-group -->
-                <hr>
+                <hr class="thin-search-off">
                 <article>
                     <h3>Follow Us! ad</h3>
                         <h4>We are on Twitter, and especially look us up on GitHub to see all of our code</h4>
