--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-    <button type="button" class="thin-nav-toggle navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <button type="button" class="thin-nav-toggle navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
