--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-    <button type="button" class="thin-nav-toggle btn-default">&#9776;</button>
+    <button type="button" class="thin-nav-toggle">&#9776;</button>
     <div class="container small-cont thin-nav">
             <div class="row">
                 <div class="col-sm-3 text-center">
