--- a/static/blog/css/index.css
+++ b/static/blog/css/index.css
@@ -63,6 +63,7 @@ body {
     .thin-nav-toggle {
         display: inline;
         font-size: 28px;
+        padding-left: 5px;
     }
 
     .imghead > h1 {
